Adding the ability to filter resource roles on legacyId
